--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.2.10
+boto==2.49.0
+boto3==1.18.5
+botocore==1.21.5
 certifi==2020.12.5
 charset-normalizer==2.0.2
 dj-database-url==0.5.0
 Django==3.0.8
+django-storages==1.11.1
 django-heroku==0.3.1
 Faker==8.1.2
 gunicorn==20.1.0
